[package]
name = "trojan"
# trojan-go v0.10.6
version = "0.10.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["tokio"]
crypto = ["dep:ring", "dep:sha2"]
runtime = [
    "crypto",
    "tokio",
    "dep:zero-platform-tokio",
    "dep:zero-transport",
]
tokio = ["dep:tokio"]

[dependencies]
async-trait = "0.1"
ring = { version = "0.17", optional = true }
sha2 = { version = "0.10", optional = true }
tokio = { workspace = true, optional = true }
zero-core = { path = "../../crates/core" }
zero-platform-tokio = { path = "../../crates/platform/tokio", optional = true }
zero-transport = { path = "../../crates/transport", optional = true, features = ["tls"] }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
