[package]
name = "zero-protocol-vless"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
reality = [
    "dep:base64",
    "dep:bytes",
    "dep:futures-util",
    "dep:h2",
    "dep:http",
    "dep:log",
    "dep:quinn",
    "dep:rand",
    "dep:rcgen",
    "dep:ring",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:subtle",
    "dep:tokio",
    "dep:tokio-rustls",
    "dep:tokio-tungstenite",
    "dep:tracing",
    "dep:tungstenite",
    "dep:webpki-roots",
    "dep:x25519-dalek",
    "dep:x509-parser",
    "dep:zero-config",
    "dep:zero-engine",
    "dep:zero-platform-tokio",
]

[dependencies]
base64 = { version = "0.22", optional = true }
bytes = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }
h2 = { version = "0.4", optional = true }
http = { version = "1", optional = true }
log = { version = "0.4", optional = true }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring"], optional = true }
rand = { version = "0.9", optional = true }
rcgen = { version = "0.14", optional = true }
ring = { version = "0.17", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rustls-pemfile = { version = "2", optional = true }
subtle = { version = "2.6", optional = true }
tokio = { workspace = true, optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }
tracing = { workspace = true, optional = true }
tokio-tungstenite = { version = "0.23", optional = true }
tungstenite = { version = "0.23", optional = true }
webpki-roots = { version = "1", optional = true }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"], optional = true }
x509-parser = { version = "0.18", default-features = false, features = ["verify"], optional = true }
zero-config = { path = "../../crates/config", optional = true }
zero-core = { path = "../../crates/core" }
zero-engine = { path = "../../crates/engine", optional = true }
zero-platform-tokio = { path = "../../crates/platform/tokio", optional = true }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
ring = { version = "0.17" }
rand = "0.9"
futures-util = { version = "0.3" }
bytes = "1"
