[package]
name = "vless"
# Xray-core v25.3.1
version = "25.3.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["tokio", "runtime"]
tokio = ["dep:tokio"]
runtime = []
validation = ["dep:base64"]
reality = [
    "runtime",
    "tokio",
    "dep:base64",
    "dep:hex",
    "dep:log",
    "dep:rand",
    "dep:rcgen",
    "dep:ring",
    "dep:subtle",
    "dep:x25519-dalek",
    "dep:x509-parser",
]

[dependencies]
async-trait = "0.1"
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
rand = { version = "0.9", optional = true }
rcgen = { version = "0.14", optional = true }
ring = { version = "0.17", optional = true }
subtle = { version = "2.6", optional = true }
tokio = { workspace = true, optional = true }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"], optional = true }
x509-parser = { version = "0.18", default-features = false, features = ["verify"], optional = true }
zero-core = { path = "../../crates/core" }
ztls = { path = "../../crates/ztls" }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
ring = { version = "0.17" }
rand = "0.9"
futures-util = { version = "0.3" }
bytes = "1"
