[package]
name = "zero-protocol-vmess"
# Xray-core v25.3.1
version = "25.3.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
rand = "0.9"
ring = "0.17"
zero-core = { path = "../../crates/core" }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
