[package]
name = "vmess"
# Xray-core v25.3.1
version = "25.3.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
runtime = [
    "dep:zero-platform-tokio",
    "dep:zero-transport",
]

[dependencies]
async-trait = "0.1"
rand = "0.9"
ring = "0.17"
md5 = "0.7"
crc32fast = "1"
aes = "0.8"
sha2 = "0.10"
sha3 = "0.10"
tokio.workspace = true
zero-core = { path = "../../crates/core" }
zero-platform-tokio = { path = "../../crates/platform/tokio", optional = true }
zero-transport = { path = "../../crates/transport", optional = true, features = ["grpc", "tls", "ws"] }
zero-traits = { path = "../../crates/traits" }

[dev-dependencies]
tokio.workspace = true
