[package]
name = "zero-platform-tokio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
vless-reality = ["dep:zero-protocol-vless"]

[dependencies]
tokio.workspace = true
zero-protocol-vless = { path = "../../../protocols/vless", default-features = false, features = ["reality"], optional = true }
zero-traits = { path = "../../traits" }
